@@ -10,8 +10,9 @@ apply plugin: 'java'
 repositories {
     mavenCentral()
 }
-
+//--add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
@@ -35,8 +36,14 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
 
-//    implementation "org.neo4j:neo4j:4.4.0"
+    implementation 'org.neo4j:neo4j:4.4.2'
 
+}
+
+configurations.all {
+    resolutionStrategy {
+        force 'org.eclipse.jetty:jetty-util:9.4.7.v20170914'
+    }
 }
 
 test {
